2004-07-13 Niklas Knutsson  <nq@altern.org>

	* Ability to set all number bases from 2 to 36 from GUI
	* Documentation updates
	* Alternative to use lower case letters in numbers
	* Fix double decimal point with integers
	* Fix decimal reduction rounding
	* Fix precision rounding

2004-07-12 Niklas Knutsson  <nq@altern.org>

	* Update documentation
	* Force use of -O2 instead of -Os
	* Revert back to a^b^c = a^(b^z) (I don't remember changing it)
	* Unknowns disabled by default
	* Copy subfunctions
	* GUI for subfunctions

2004-07-11 Niklas Knutsson  <nq@altern.org>

	* Do not segfault on exit
	* Fix compilation warnings

2004-07-10 Niklas Knutsson  <nq@altern.org>

	* Do not try to fetch exchange rates everytime they are missing
	* Set fetch timeout to 5 seconds on first run
	* Inform user that we are trying to fetch exchange rates
	* Update fetch exchange rates at startup in preferences dialog

2004-07-05 Niklas Knutsson  <nq@altern.org>

	* Follow ISO 8601 standard for week numbers (glib doesn't)
	* Sort out approximation with rounding

2004-07-03 Niklas Knutsson  <nq@altern.org>

	* Fix input of numbers in bases > 10
	* Is approximate? fixes
	* usleep() is obsolete. use nanosleep() instead
	* Terminate threads before exit
	* Include unistd.h in main.cc for pipes

2004-06-24 Niklas Knutsson  <nq@altern.org>

	* definitions -> subfunctions
	* save subfunctions
	* Function::countSubfunctions()
	* Fix for()
	* Fix creation of vectors with zero or one component
	* Pass parse options to function parsing
	* Variables might contain functions
	* Fix approximate integer printing
	* Fix try exact

2004-06-23 Niklas Knutsson  <nq@altern.org>

	* Release v. 0.6
	* Do not create a new thread for every calculation and printing

2004-06-21 Niklas Knutsson  <nq@altern.org>

	* ...

2004-06-18 Niklas Knutsson  <nq@altern.org>

	* Continue converting to new internal structures

2004-06-14 Niklas Knutsson  <nq@altern.org>

	* Continue converting to new internal structures
